--- a/client/app.html
+++ b/client/app.html
@@ -13,6 +13,7 @@
 <div ng-view></div>
 <script type="text/javascript" src="app.js"></script>
 <script type="text/javascript" src="directives/puzzle-cell/puzzle-cell.js"></script>
+<script type="text/javascript" src="directives/flier.js"></script>
 <script type="text/javascript" src="controllers/main/mainCtrl.js"></script>
 <script type="text/javascript" src="controllers/start/startCtrl.js"></script>
 </body>
