--- a/client/controllers/main/main.html
+++ b/client/controllers/main/main.html
@@ -41,7 +41,8 @@
             <b>Get set go!!</b>
             </div>
     <div class="row">
-        Score: <span>{{points}}</span>
+        Score: <div class="pointsWrapper">{{points}} <div class="flierWrapper" data="points" flier ></div></div>
+
     </div>
 
      <div class="row">Your best score: {{bestScore}} </div>
